src/test/ui/hrtb/hrtb-just-for-static.stderr
error[E0277]: the trait bound `for<'a> StaticInt: Foo<&'a isize>` is not satisfied
  --> $DIR/hrtb-just-for-static.rs:24:17
   |
LL | fn want_hrtb<T>()
   |    ---------
LL |     where T : for<'a> Foo<&'a isize>
   |               ---------------------- required by this bound in `want_hrtb`
...
LL |     want_hrtb::<StaticInt>()
   |                 ^^^^^^^^^ the trait `for<'a> Foo<&'a isize>` is not implemented for `StaticInt`
   |
   = help: the following implementations were found:
             <StaticInt as Foo<&'static isize>>

error[E0277]: the trait bound `for<'a> &'a u32: Foo<&'a isize>` is not satisfied
  --> $DIR/hrtb-just-for-static.rs:30:17
   |
LL | fn want_hrtb<T>()
   |    ---------
LL |     where T : for<'a> Foo<&'a isize>
   |               ---------------------- required by this bound in `want_hrtb`
...
LL |     want_hrtb::<&'a u32>()
   |                 ^^^^^^^ the trait `for<'a> Foo<&'a isize>` is not implemented for `&'a u32`
   |
   = help: the following implementations were found:
             <&'a u32 as Foo<&'a isize>>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
